# product-catalog

./: .dockerignore  .env.sample  Dockerfile  README.md  database.py  docker-compose.yml  filter_builder.py  main.py  pyproject.toml  requirements.txt  settings.py
models/: filters.py  products.py
routes/: filters.py  products.py  search.py
schemas/: filters.py  products.py
schemas/examples/: filters.py
tests/: conftest.py  test_filters.py  test_products.py  test_search.py
