[project]
name = "product-catalog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beanie==2.0.0",
    "certifi==2025.8.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "fastapi==0.117.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "lazy-model==0.3.0",
    "mongomock==4.3.0",
    "mongomock-motor==0.0.36",
    "motor==3.7.1",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pymongo==4.15.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "sentinels==1.1.1",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.37.0",
]
